# usaBOXING_repo

./: AGENTS.md  Cargo.toml  PLAN.md  PROJECT.md  README.md  fix_stubs.sh  generate_olympic_stubs.sh  generate_paralympic_stubs.sh  generate_registries.py
GREENFIELD/: Cargo.toml  README.md
GREENFIELD/apple/: Package.swift  project.yml
GREENFIELD/apple/.build/: build.db  debug.yaml
GREENFIELD/apple/Validation/: main.swift
GREENFIELD/crates/peakcore-estimator/: Cargo.toml
GREENFIELD/crates/peakcore-ffi/: Cargo.toml
GREENFIELD/crates/peakcore-model/: Cargo.toml
actor-packs/actor-crewed-rig/: Cargo.toml
actor-packs/actor-crewed-rig/src/: lib.rs
actor-packs/actor-equine/: Cargo.toml
actor-packs/actor-equine/src/: lib.rs
actor-packs/actor-human/: Cargo.toml
actor-packs/actor-human/src/: lib.rs
crates/sportcore-actors/: Cargo.toml
crates/sportcore-actors/src/: lib.rs
crates/sportcore-cli/: Cargo.toml
crates/sportcore-cli/src/: main.rs
crates/sportcore-features/: Cargo.toml
crates/sportcore-features/src/: lib.rs
crates/sportcore-ffi/: Cargo.toml
crates/sportcore-ffi/include/: sportcore.h
crates/sportcore-ffi/src/: lib.rs
crates/sportcore-ids/: Cargo.toml
crates/sportcore-ids/src/: lib.rs
crates/sportcore-instruments/: Cargo.toml
crates/sportcore-instruments/src/: lib.rs
crates/sportcore-kernel/: Cargo.toml
crates/sportcore-kernel/src/: lib.rs
crates/sportcore-qa/: Cargo.toml
crates/sportcore-qa/src/: lib.rs
crates/sportcore-qa/tests/: registry_validation.rs
crates/sportcore-semantics/: Cargo.toml
crates/sportcore-semantics/src/: lib.rs
crates/sportcore-streams/: Cargo.toml
crates/sportcore-streams/src/: lib.rs
crates/sportcore-time/: Cargo.toml
crates/sportcore-time/src/: lib.rs
crates/sportcore-time/tests/: time.rs
crates/sportcore-units/: Cargo.toml
crates/sportcore-units/src/: lib.rs
crates/sportcore-units/tests/: units.rs
docs/: ARCHITECTURE.md  BUNDLE_FORMAT.md  EVALUATION.md  FFI.md  SECURITY.md
fixtures/bundles/minimal/: manifest.json
fixtures/goldens/: minimal_summary.json
hosts/host-ios/: SportCoreFFI.swift
runtime/runtime-eval/: Cargo.toml
runtime/runtime-eval/src/: lib.rs
runtime/runtime-export/: Cargo.toml
runtime/runtime-export/src/: lib.rs
runtime/runtime-features/: Cargo.toml
runtime/runtime-features/src/: lib.rs
runtime/runtime-ingest/: Cargo.toml
runtime/runtime-ingest/src/: lib.rs
runtime/runtime-ingest/tests/: manifest.rs
runtime/runtime-models/: Cargo.toml
runtime/runtime-models/src/: lib.rs
runtime/runtime-perception/: Cargo.toml
runtime/runtime-perception/src/: lib.rs
runtime/runtime-storage/: Cargo.toml
runtime/runtime-storage/src/: lib.rs
runtime/runtime-sync/: Cargo.toml
runtime/runtime-sync/src/: lib.rs
schemas/bundle/: manifest.schema.json
sport-packs/olympic/archery/: Cargo.toml
sport-packs/olympic/artistic-gymnastics/: Cargo.toml
sport-packs/olympic/artistic-swimming/: Cargo.toml
sport-packs/olympic/badminton/: Cargo.toml
sport-packs/olympic/baseball/: Cargo.toml
sport-packs/olympic/basketball-3x3/: Cargo.toml
sport-packs/olympic/equestrian/: Cargo.toml
sport-packs/olympic/equestrian/src/: lib.rs
sport-packs/registry/: olympic-summer.json  paralympic-summer.json
sport-packs/sport-boxing/: Cargo.toml
sport-packs/sport-equestrian/: Cargo.toml
sport-packs/sport-rowing/: Cargo.toml
sport-packs/sport-swimming/: Cargo.toml
(+348 files in other folders)
