[package]
name = "sportcore-streams"
version = "0.1.0"
edition = "2024"

[features]
default = []
alloc = []
serde = []
ffi = []
onnx = []
opencv = []
boxing = []
swimming = []
rowing = []
equestrian = []
equine = []

[dependencies]
sportcore-ids = { path = "../../crates/sportcore-ids" }
sportcore-time = { path = "../../crates/sportcore-time" }
sportcore-units = { path = "../../crates/sportcore-units" }
