[package]
name = "sport-olympic-equestrian"
version = "0.1.0"
edition = "2024"

[features]
default = []
alloc = []
serde = []
ffi = []
onnx = []
opencv = []
boxing = []
swimming = []
rowing = []
equestrian = []
equine = []

[dependencies]
sportcore-kernel = { path = "../../crates/sportcore-kernel" }
